<?xml version="1.0" encoding="utf-8"?>
<!-- date: august 8/5/2013 -->
<resources>
    <!-- Common values -->
    <string name="app_name">Trip Money</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>    
    <string name="search_hint">Search</string>
    <!-- Event List -->
    <string name="add_event">Add Event</string>
    <!-- Event Edit -->
    <string name="event_edit_title">Edit Event</string>
    <string name="event_edit_lbl_name">Event Name</string>    
    <string name="event_edit_lbl_desc">Event Description</string>
    <string name="event_edit_name_hint">Name</string>
    <string name="event_edit_desc_hint">Description</string>
	<string name="event_edit_prim_curr">Primary Currency</string>
	<string name="event_edit_prim_curr_def">.....</string>
    <!-- Operation Edit  -->
	<string name="op_edit_lbl_sum">Sum</string>
	<string-array name="op_edit_types">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
	<string name="op_edit_lbl_desc">Description</string>
	<string name="op_edit_lbl_category">Category</string>
	<string name="op_edit_lbl_place">Place</string>
	<string name="op_edit_lbl_datetime">Date and Time</string>
	<!-- Operation List -->
	<string name="add_operation">Add operation</string>
	<!--  -->
	<string name="action_settings">Settings</string>        
    
    <string name="title_activity_edit_operation">Edit operation</string>
    <string name="id_text_view">Id: </string>     
    <string name="open_dictionaries">Dictionaries</string>    
    <string name="add_element">New Entry</string>
    <string name="erase_all_data">Clear all data</string>    
    <string name="op_name_tv">Name</string>
    <string name="op_desc_tv">Description</string>
	<string name="filter_hint_start_typing">Start typing here.. </string>
	<string name="op_all_expenses">Expenses: </string>	
	<string name="op_id_tv">Id: </string>
	<string name="op_del_menu">Delete event</string>
	<string name="enter_name">Please enter name.</string>
	<string name="event_deleted">Event deleted.</string>
	<string name="op_deleted">Operation deleted.</string>
	<string name="not_message">Not a message.</string>	
	<string name="place_tab">Places</string>
	<string name="category_tab">Categories</string>
	<string name="currency_tab">Currencies</string>	
	<string name="delete_dialog_title">Delete dialog</string>
	<string name="event_title">Event</string>
	<!-- dictionary -->
	<string name="dic_del">Delete</string>	
	<string name="dic_name_lbl">%s name</string>
	<string name="dic_new_title">New %s</string>
	<string name="dic_edit_title">Edit %s</string>
	<string name="used_by_ops">You can\'t delete this %1$s.\nIt used by %2$d operations.</string>	
	<string name="used_by_events_prim">You can\'t delete this currency.\nIt used by %d events as primary currency.</string>
	<string name="place">place</string>
	<string name="category">category</string>
	<string name="currency">currency</string>
	<string name="this_op">this operation</string>
	<string name="dic_currency_code_lbl">Currency code</string>
	<string name="dic_edit">Edit</string>
	<string name="confirm_del">Are you sure want to delete %s?</string>
	<string name="sorry_confirm_del">We are sorry.</string>
	<string name="warning">Warning</string>
	<string name="okay">Okay</string>
   	<string name="enter_value">Please, enter value.</string>
   	<string name="pick_place">Please, pick place.</string>
   	<string name="pick_category">Please, pick category.</string>
   	<string name="pick_currency">Please, pick currency.</string>
   	<string name="op_created">Operation created.</string>
	<string name="ev_used_by_ops">%1$s has %2$d operations in it. They all will be deleted along with event.\nAre you sure want to delete all this?</string>
	<string name="enter_code">Please, enter code as well.</string>
	<string name="enter_currency">Please, enter currency.</string>
	<string name="save_op">Save</string>
	<string name="cancel_op">Cancel</string>
	<string name="op_changed">Operation changed.</string>
	<string name="operation_failed">Operation failed.</string>	
	<!-- PREFERENCES -->
	<string name="pref_curr_event_mode_title">Current Event mode</string>
	<string name="pref_curr_event_mode_summary">Allow first screen be your current event</string>
	<string name="pref_language_title">Language</string>	
	<string name="pref_language_dialog_title">Pick your language</string>	
	<string-array name="pref_lang_entries">
	    <item>Default</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="pref_lang_entry_values">
        <item>def</item>
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="pref_lang_title">Language</string>
    <string name="pref_lang_dialog_title">Choose language</string>
    <string name="pref_backup_database_title">Backup and Restore</string>
    <string name="pref_backup_database_summary">Save and restore your data from device memory or share it via email</string>    
    <string name="pref_recreate_database_title">Clear all your data</string>
    <string name="pref_recreate_database_summary">Delete all events, operations, places, etc.</string>
    <string name="pref_recreate_database_dialog_title">Clear all data</string>
    <string name="pref_recreate_database_dialog_message">Are you sure?\nThese changes cannot be undone.</string>
	<string name="pref_all_data_erased">All data cleared.</string>
	<string name="settings">Settings</string>
	<string name="default_lang">def</string>		
	<string name="pref_backup_database_title_device">Backup to device memory</string>
	<string name="pref_backup_database_def">unknown@unknown</string>
	<string name="pref_backup_database_dialog_title">Backup</string>
	<string name="pref_backup_database_device_dialog_message">Copy your data to %s. It will appear as EventAcc.db</string> 	  
	<string name="copy">Copy</string>
	<string name="last_backup">Last backup: %1$s\nWas copied to: %2$s </string>
	<string name="last_backup_half">Last backup: %s</string>
	<string name="backup_copy_success">Successfully copied.</string>
	<string name="unknown">unknown</string>
	<string name="backup_subject">Backup of AccTrip</string>
	<string name="backup_text">Backup of AccTrip delivered</string>
	<string name="assum_sent">Assuming, you will send it</string>
	<string name="send">Send</string>
	<string name="pref_backup_database_title_email">Backup to your email</string>
	<string name="pref_backup_database_email_dialog_message">Send your data via email. While process you will also acquire copy on device.</string> 
	<string name="backup">Backup:</string>
	<string name="pref_default_title">Reset settings</string>
	<string name="pref_default_dialog_title">Reset settings</string>
	<string name="pref_default_dialog_message">Reset all settings to default?</string>
	<string name="set_default">Reset</string>
	<string name="def_applied">Settings reseted.</string>
	<string name="pref_restore_from_device_dialog_message">Did you copied backuped file to %s using some device file manager?</string>
	<string name="pref_restore_from_device_summary">Before restore, copy backuped file to %1$s with the same filename.\nLast restore: %2$s</string>
	<string name="pref_restore_from_device_title">Restore data</string>
	<string name="restore">Restore</string>
	<string name="restore_success">Restore successed.</string>
	<string name="curr_none">Curr$</string>
	<string name="cat_none">Category</string>
	<string name="pl_none">Place</string>
	<string name="date_none">No date</string>
	<string name="pref_restart_dialog_title">Restart</string>
	<string name="pref_restart_dialog_message">To changes to be applied, relaunch @string/app_name this way.</string>
<!-- 	<string name="pref_restart_summary2">\nTo changes to be applied, need restart app.</string> -->
	<string name="close_app">Relaunch</string>
	<string name="entry_created">%s created.</string>
	<string name="entry_deleted">%s deleted.</string>
	<string name="entry_edited">%s edited.</string>

		<string name="edit_event_curr_def">Curr$</string>
	<string name="edit_event_cat_def">Category</string>
	<string name="edit_event_place_def">Place</string>
	
	
	<string name="cur_row_arrow">-></string>
	<string name="flip_currs">Flip currencies</string>
	<string name="apply">Apply</string>
	<string name="event_currencies_activity_title">Edit rates</string>
	<string name="currency_rates_edited">Currency rates edited.</string>
	<string name="edit_event_currs">Event currencies</string>
	<string name="edit_all">Edit all</string>
	<string name="event_currencies">Event currencies</string>
	<string name="edit_currency_rate">Edit currency rate</string>
	<string name="back">Back</string>
	<string name="currency_rate_edited">Currency rate edited.</string>
	
	<string name="warning_first_time_curr">%1$s is being used first time in %2$s, do you want to provide its ratio to primary currency(%3$s) (default 1.00 to 1.00)?</string>
	<string name="warning_new_prim_curr">%1$s is new primary currency in %2$s, you can provide rates by hand or have it auto calc.(default 1.00 to 1.00)</string>
	<string name="warning_total_new_prim_curr">%1$s is new primary currency in %2$s, do you want to provide one ratio or edit all with defaults?</string>
	<string name="provide">Provide</string>
	
	<string name="later">Later</string>
	
	<string name="warning_word">Warning</string>
	
	<string name="defaults">Defaults</string>
	
	<string name="new_prim_curr_appeared_auto_rates_btn">Auto rates</string>
	
	<string name="new_prim_curr_appeared_edit_all_with_auto_btn">Edit all with auto</string>
	
	<string name="enter_one_ratio">Enter one ratio</string>
	
	<string name="new_prim_curr_edit_chooser">Choose one to enter ratio</string>
	
	<string name="current_event">"\nCurrent event: "</string>
	
	<string name="current_event_star">Current Event</string>
	
	<string name="op_tabs_operations">" Operations"</string>
	
	<string name="op_tabs_statistics">Statistics</string>
	
	<string name="edit_event">Edit event</string>
	
	<string name="st_head_total_expenses_">Total expenses:</string>
	
	<string name="st_head_total_operations_">Total operations:</string>
	
	<string name="st_head_today_spent_">Today spent:</string>
	
	<!-- DO NOT CHANGE ORDER // StatisticsFragment said-->
	<string-array name="statistics_groups">
        <item>By day</item>
        <item>By category</item>
        <item>By currency</item>
        <item>By place</item>
    </string-array>
        <string name="show_statistics_graph">Show statistics graph</string>
	
</resources>