<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/open_dictionaries"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/open_dictionaries" android:icon="@drawable/dictionaries"/>
    <item android:id="@+id/delete_event" 
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/op_del_menu" android:icon="@drawable/dic_del"/>
    <item android:title="@string/edit_event" 
        android:id="@+id/event_edit"
        android:showAsAction="never" 
        android:icon="@drawable/dic_edit"
		android:orderInCategory="4">
    </item>
    <item android:title="@string/edit_event_currs" 
        android:id="@+id/menu_edit_event_currs" 
        android:showAsAction="never" 
        android:icon="@drawable/event_currencies"
		android:orderInCategory="2">
    </item>
</menu>